--- a/NWork.csproj
+++ b/NWork.csproj
@@ -68,6 +68,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="WeekView\WeekView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
